--- a/src/Components/dashboard/dashboard.css
+++ b/src/Components/dashboard/dashboard.css
@@ -54,6 +54,7 @@
     padding-left: 0px;
 }
 
+.side_nav .logout,
 .side_nav ul a {
     margin-bottom: 30px;
     padding: 13px 30px;
@@ -67,6 +68,7 @@
     transition: all .3s ease-in-out;
 }
 
+.side_nav .logout:hover,
 .side_nav ul a:hover li,
 .side_nav ul .active li {
     color: #F48C7D;
@@ -76,6 +78,7 @@
     color: #fff;
 }
 
+.side_nav .logout:hover,
 .side_nav ul .active,
 .side_nav ul a:hover {
     border-left: 3px solid #F48C7D;
@@ -84,6 +87,7 @@
     color: #F48C7D !important;
 }
 
+.side_nav .logout img,
 .side_nav ul .active li img,
 .side_nav ul a li img {
     width: 35px;
@@ -92,6 +96,7 @@
     transition: all .3s ease-in-out;
 }
 
+.side_nav .logout:hover img,
 .side_nav ul .active li img,
 .side_nav ul a:hover li img {
     filter: invert(14%) sepia(36%) saturate(3333%) hue-rotate(306deg) brightness(97%) contrast(97%);
@@ -204,6 +209,7 @@
     justify-content: space-between;
     border-radius: 15px;
     box-shadow: 0px 0px 12px rgb(213 213 213 / 50%);
+    margin-bottom: 25px;
 }
 
 .status_box .status span {
@@ -215,6 +221,13 @@
     justify-content: center;
     border-radius: 50%;
     background-color: #F48C7D;
+}
+
+.status_box .status span img {
+    width: 40px;
+    height: 40px;
+    object-fit: contain;
+    object-position: center;
 }
 
 .status_box .status h5 {
