--- a/src/Components/dashboard/dashboard.css
+++ b/src/Components/dashboard/dashboard.css
@@ -288,3 +288,120 @@ td {
     height: 30px;
     cursor: pointer;
 }
+
+.white_box {
+    padding: 20px;
+    padding-top: 40px;
+    background-color: #fff;
+    border-radius: 15px;
+    box-shadow: 0px 0px 12px rgb(213 213 213 / 50%);
+    margin-bottom: 25px;
+}
+
+.pro_coach_d {
+    text-align: center;
+    width: 100%;
+    border-bottom: 1px solid #e6e6e6;
+    padding-bottom: 30px;
+    margin-bottom: 30px;
+}
+
+.pro_coach_d h5 {
+    color: #F48C7D;
+    font-weight: 700;
+}
+
+.pro_coach_d .profile_coach {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin: 0 auto;
+    overflow: hidden;
+    margin-bottom: 20px;
+}
+
+.pro_coach_d .profile_coach img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+
+.other_de {
+    border-bottom: 1px solid #e6e6e6;
+    padding-bottom: 0px;
+    margin-bottom: 20px;
+}
+
+.other_de ul {
+    list-style: none;
+    padding-left: 0px;
+}
+
+.other_de ul li {
+    padding-bottom: 15px;
+}
+
+.other_de ul li svg {
+    font-size: 30px;
+    margin-right: 12px;
+    color: #F48C7D;
+}
+
+.other_de ul li span {
+    color: #5c5c5c;
+    font-weight: 500;
+}
+
+.bio_details h5 {
+    color: #f48c7d;
+    font-size: 18px;
+    margin-bottom: 20px;
+}
+
+.bio_details p {
+    font-size: 14px;
+    color: #5c5c5c;
+}
+
+.box_flex {
+    display: flex;
+    align-items: center;
+}
+
+.box_flex span {
+    padding: 10px 15px;
+    border-radius: 22px;
+    background-color: rgba(244, 140, 125, 0.2);
+    margin-right: 12px;
+    color: #F48C7D;
+    margin-bottom: 20px;
+}
+
+.pro_fess {
+    border-bottom: 1px solid #e6e6e6;
+    padding-bottom: 0px;
+    margin-bottom: 20px;
+}
+
+.dollar_p svg {
+    font-size: 40px;
+    margin-right: 12px;
+    color: #f48c7d;
+}
+
+.dollar_p span {
+    color: #5c5c5c;
+    font-weight: 600;
+}
+
+.done_btn {
+    display: inline-block !important;
+    padding: 12px 30px;
+}
+
+.back {
+    font-size: 40px;
+    margin-bottom: 20px;
+    color: #5c5c5c;
+}
